# Lua_CPP_2022

./: CMakeLists.txt  Error.h  LuaSecureFun.cpp  LuaStack.cpp  LuaStack.h  README.md  lua_study_main.cpp  simple_parser.cpp  simple_parser.h
10、userdata/: main.cpp
10、userdata/User/1普通版本/: user.cpp  user.h  user.lua
10、userdata/User/2增加元表检查/: user.cpp  user.h
10、userdata/User/3面向对象/: user.cpp  user.h  user.lua
10、userdata/array/1普通版本/: array.cpp  array.h
10、userdata/array/2增加元表/: array.cpp  array.h  array.lua
10、userdata/array/3面向对象/: array.cpp  array.h  array.lua
10、userdata/array/4数组访问/: array.cpp  array.h
10、userdata/full_userdata/array/1普通版本/: array.cpp  array.h  array.lua
10、userdata/full_userdata/array/2增加元表/: array.cpp  array.h
10、userdata/full_userdata/array/3面向对象/: array.cpp  array.h
10、userdata/full_userdata/array/4数组访问/: array.cpp  array.h
10、userdata/full_userdata/user/1普通版本/: user.cpp  user.h  user.lua
10、userdata/full_userdata/user/2增加元表检查/: user.cpp  user.h  user.lua
10、userdata/full_userdata/user/3面向对象/: user.cpp  user.h  user.lua
10、userdata/light_userdata/: user.cpp  user.h
10、userdata/用户数据/: newarray.cpp  newarray.lua
10、userdata/用户数据_数组访问/: newarray.cpp  newarray_数组访问.lua
10、userdata/用户数据_面向对象/: newarray.cpp
10、管理资源/file/: file.cpp
10、管理资源/xml/: xml_parser.cpp  xml_parser.lua
11、管理资源/: main.cpp
11、管理资源/file/: file.cpp  file.h
11、管理资源/xml/: xml_parser.cpp  xml_parser.h  xml_parser.lua
11、线程和状态/thread/: ThreadDemo.cpp
12、线程和状态/: main.cpp
12、线程和状态/lproc/: lproc.cpp  lproc.h
12、线程和状态/thread/: ThreadDemo.cpp  copy_statck.lua  coroutine.lua  thread_demo.cpp  thread_demo.h
1、C++集成Lua/: main.cpp
1、C_API/: Error.cpp  c_api_main.cpp  secure_fun.h  stack.cpp
2、C++与Lua数据交互载体——栈/: main.cpp  secure_fun.cpp  stack.cpp  stack.h
2、application_extend/: application_extend_main.cpp  config.lua  config_parser.cpp  main.cpp
2、application_extend/调用Lua函数/: 调用Lua函数.cpp  调用Lua函数.h  调用Lua函数.lua
2、application_extend/通用调用lua函数/: call_va.cpp
2、扩展应用/: config.lua  config_parser.cpp  扩展应用_main.cpp
3、C++与Lua交互错误处理/: main.cpp
3、C++与Lua交互错误处理/C++调用Lua异常处理/: C++处理Lua异常.cpp  C++处理Lua异常.h  C运行的Lua文件.lua
3、C++与Lua交互错误处理/Lua调用C++异常处理/: Lua处理C++异常.cpp  Lua处理C++异常.h
3、C++与Lua交互错误处理/紧急函数/: 紧急函数.cpp
3、C++调用Lua的错误处理和内存分配/: C运行的Lua文件.lua  main.cpp  secure_fun.cpp  secure_fun.h  simple_parser.cpp
3、C++调用Lua的错误处理和内存分配/C++调用Lua异常处理/: C++处理Lua异常.cpp  C运行的Lua文件.lua
3、C++调用Lua的错误处理和内存分配/Lua调用C++异常处理/: Lua处理C++异常.cpp  Lua处理C++异常.h  Lua处理C++异常.lua  给Lua调用的C++函数.cpp  给Lua调用的C++函数.h
3、C++调用Lua的错误处理和内存分配/内存分配/: 自定义内存分配器.cpp
3、C++调用Lua的错误处理和内存分配/紧急函数/: Lua异常.lua  紧急函数.cpp  紧急函数.h
3、lua_call_c/: lua_call_c.lua  main.cpp
4、C++与Lua交互内存管理/: main.cpp  自定义内存分配器.h
4、lua_call_c_lib/: c_lib_main.cpp  lua加载c库.lua  main.cpp
4、lua_call_c_lib/lib/: mylib.cpp  mylib.h
4、lua_call_c_lib/协程/: CoroutineDemo.cpp  CoroutineDemo.h  coroutine.lua
5、C++调用Lua代码/: main.cpp
5、C++调用Lua代码/Lua作为配置文件/: config.lua  config_parser.cpp  config_parser.h
5、C++调用Lua代码/Lua作为配置文件/根据环境变量获取值/: config.lua  config_use_env.cpp  config_use_env.h
5、C++调用Lua代码/Lua作为配置文件/配置中使用表/: config.lua  config_use_table.cpp  config_use_table.h
5、C++调用Lua代码/调用Lua函数/: 调用Lua函数.cpp  调用Lua函数.h  调用Lua函数.lua
5、C++调用Lua代码/通用调用lua函数/: call_va.cpp  call_va.h
5、编写C函数技巧/: LuaArray.cpp  LuaString.cpp  注册表.cpp
5、编写C函数技巧/tuple/: tuplelib.cpp
5、编写C函数技巧/上值/: 上值.cpp  上值.h
5、编写C函数技巧/共享上值/: 共享上值.cpp  共享上值.lua
6、Lua回调C++/: lua_call_c.cpp  lua_call_c.lua  main.cpp
6、Lua回调C++/Lua调用C++的lib/: lua加载c库.lua
6、Lua回调C++/Lua调用C++的lib/lib/: mylib.h
6、Lua回调C++/协程/: CoroutineDemo.cpp  CoroutineDemo.h  coroutine.lua
6、Lua回调C++/调用C++函数/: 简易的sin函数.cpp  简易的sin函数.h  简易的sin函数.lua  读取目录函数.cpp  读取目录函数.h  读取目录函数.lua
6、userdata/用户数据/: newarray.cpp
6、userdata/用户数据_数组访问/: newarray.cpp  newarray.h  newarray_数组访问.lua
6、userdata/用户数据_面向对象/: newarray.cpp
7、Lua调用C++的lib/: Lua加载C模块.lua  main.cpp
7、Lua调用C++的lib/lib/: CMakeLists.txt
7、Lua调用C++的lib/lib/lua_lib/lua-5.4.4/: lobject.h
7、Lua调用C++的lib/lib/src/: mylib.cpp
7、管理资源/: main.cpp
7、管理资源/file/: file.cpp  file.h
7、管理资源/xml/: baidu.xml  expat.h  xml_parser.cpp  xml_parser.lua
8、线程和状态/: ThreadDemo.cpp  lproc.cpp  main.cpp  thread.lua
8、线程和状态/thread/: ThreadDemo.cpp
8、编写C函数便捷技巧/: main.cpp
8、编写C函数便捷技巧/字符串便捷操作/: LuaString.cpp  LuaString.h  字符串截取.lua
8、编写C函数便捷技巧/数组便捷存取/: LuaArray.cpp
8、编写C函数技巧/: LuaString.cpp  LuaString.h  main.cpp
8、编写C函数技巧/tuple/: tuplelib.cpp  tuplelib.h
8、编写C函数技巧/上值/: 上值.cpp  上值.h
8、编写C函数技巧/共享上值/: 共享上值.cpp  共享上值.h
8、编写C函数技巧/字符串便捷操作/: LuaString.cpp  字符串连接（缓冲区）.lua
8、编写C函数技巧/数组便捷存取/: Array便捷存取.lua  LuaArray.cpp  LuaArray.h
8、编写C函数技巧/注册表/: 注册表.cpp
9、C函数中保存状态/: main.cpp
9、C函数中保存状态/tuple/: tuple.lua  tuplelib.cpp  tuplelib.h
9、C函数中保存状态/上值/: 上值.cpp  上值.h  上值.lua
9、C函数中保存状态/共享上值/: 共享上值.cpp  共享上值.h
9、C函数中保存状态/注册表/: 注册表.cpp  注册表.h
9、C函数中如何保存Lua的数据/: main.cpp
9、C函数中如何保存Lua的数据/tuple/: tuplelib.cpp  tuplelib.h
9、C函数中如何保存Lua的数据/上值/: 上值.cpp  上值.h
9、C函数中如何保存Lua的数据/共享上值/: 共享上值.cpp
9、userdata/: main.cpp
9、userdata/用户数据/: newarray.cpp  newarray.lua
9、userdata/用户数据_数组访问/: newarray.cpp
9、userdata/用户数据_面向对象/: newarray.cpp  newarray.h  newarray_面向对象.lua
config/: env_config.cpp  env_config.h
extend/: ConfigParser.cpp  ConfigParser.h
lua_lib/: CMakeLists.txt
lua_lib/lua-5.4.4/: lauxlib.c
lua调用c/: LuaCallCDemo.cpp  LuaCallCDemo.h  luaCallC.lua  lua调用c.cpp
utils/: lua_error.cpp  lua_ext.cpp  lua_ext.h  stack_dump.cpp  stack_dump.h
协程/: CoroutineDemo.h
库/: CMakeLists.txt  mylib.cpp  mylib.h  库.cpp  库.h  库.lua
用户自定义类型/用户数据/: newarray.cpp  newarray.h  newarray.lua
管理资源/: XmlParser.cpp  XmlParser.h  file.cpp  file.h  file.lua
线程和状态/: ThreadDemo.cpp  ThreadDemo.h  lproc.cpp  lproc.h  thread.lua
编写C函数技巧/: LuaArray.cpp  LuaArray.h  LuaString.cpp  LuaString.h  注册表.cpp  注册表.h
编写C函数技巧/tuple/: CMakeLists.txt  tuple.lua  tuplelib.c  tuplelib.cpp
编写C函数技巧/上值/: 上值.cpp  上值.lua
编写C函数技巧/共享上值/: 共享上值.cpp  共享上值.h
调用Lua函数/: 调用Lua函数.cpp
通用调用lua函数/: call_va.cpp  call_va.h
(+1 files in other folders)
